update migration vers architecture multi-modules